v0.2.3 - Max-width fixed on bleed

--- a/src/_bleed.scss
+++ b/src/_bleed.scss
@@ -45,7 +45,7 @@
 }
 
 .ibm-col-bleed {
-  max-width: initial;
+  max-width: map-get(map-get($ibm-grid, max), breakpoint);
 
   @each $breakpoint, $values in $ibm-grid {
     @if map-get($values, margin) {
